# optiviz

./: Experiment.ipynb  README.md  base.py  class_Visualizer.py  function_optim.py  neldermead.py  newton.py  optiviz.py  pyproject.toml
.ipynb_checkpoints/: Experiment-checkpoint.ipynb
introduction/: optim_vizu_guide.ipynb
optim_vizu/: optiviz_cli.py
