[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "optim-vizu"
version = "1.0.0"
description = "Visualisierung von Optimierungsverfahren"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools]
packages = ["optim_vizu"]